html client / markdown config / yml korrekturen

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,30 @@
 {
     "cSpell.language": ",de,en",
     "cSpell.words": [
+        "arial",
+        "ausgegrauten",
+        "dateadd",
+        "datediff",
+        "datepart",
         "editfeld",
+        "editfield",
+        "ehid",
+        "enventa",
         "f",
+        "frameworkstudio",
+        "getdate",
+        "getutcdate",
+        "getguid",
+        "likeescape",
+        "ltrim",
+        "memberpage",
+        "metadatatypen",
+        "mlkey",
+        "mlstring",
+        "multilanguage",
+        "newid",
+        "prioritätsebenen",
+        "rtrim",
         "sbool",
         "sbyte",
         "sdecimal",
@@ -16,6 +38,15 @@
         "sbyte",
         "smallint",
         "sstring",
-        "varchar"
+        "stdev",
+        "sysdate",
+        "systimestamp",
+        "textcollection",
+        "textcollections",
+        "trunc",
+        "varchar",
+        "woerterbuch",
+        "yymmdd",
+        "yyyymmdd"
     ]
 }
