--- a/doc/toc.yml
+++ b/doc/toc.yml
@@ -4,8 +4,15 @@ items:
 
 - name: Metadatentypen
   href: mdt/ 
+
+- name: Database
+  items:
+    - name: ML-Column
+      href: database/ml-column.md
+
 - name: Components
   href: comp/
+
 - name: Sql-Syntax
   href: sql/syntax.md
   items:
@@ -25,6 +32,15 @@ items:
       href: sql/cast-funktionen.md
     - name: Aggregat-Funktionen
       href: sql/aggr-funktionen.md
+
+- name: Datenbank-Tabellen
+  items:
+    - name: dbRun_Config (Business)
+      href: tables/dbrun_config.md
+    - name: dbRun_MLStrings (Business)
+      href: tables/dbrun_mlstrings.md
+    - name: ML_Config (Business)
+      href: tables/ml_config.md
 
 - name: HTML-Client
   href: html-client/
