Options - "Languages in designer" mit Links auf MLKey - Fehler behoben

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.language": ",de,en",
     "cSpell.words": [
+        "Strg",
         "arial",
         "ausgegrauten",
         "dateadd",
@@ -13,8 +14,8 @@
         "f",
         "frameworkstudio",
         "getdate",
-        "getutcdate",
         "getguid",
+        "getutcdate",
         "likeescape",
         "ltrim",
         "memberpage",
