--- a/toc.yml
+++ b/toc.yml
@@ -1,5 +1,9 @@
 items:
+- name: Framework Studio 4.0
+  href: index.html
+- name: Artikel
+  href: articles/
 - name: Technische Doku
   href: doc/
-- name: Api Documentation
+- name: Api Dokumentation
   href: obj/api/
