--- a/toc.yml
+++ b/toc.yml
@@ -1,6 +1,6 @@
 items:
 - name: Framework Studio 4.0
-  href: index.html
+  href: index.md
 - name: Artikel
   href: articles/
 - name: Technische Doku
