--- a/toc.yml
+++ b/toc.yml
@@ -1,6 +1,6 @@
 items:
 - name: Framework Studio 4.2
-  href: articles/
+  href: articles/neuheiten-4-2.md
 - name: Technische Doku
   href: doc/
 - name: Api Dokumentation
