--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "Strg",
         "arial",
         "ausgegrauten",
+        "auszuchecken",
         "dateadd",
         "datediff",
         "datepart",
@@ -42,6 +43,7 @@
         "textcollection",
         "textcollections",
         "trunc",
+        "ungespeicherte",
         "varchar",
         "woerterbuch",
         "yymmdd",
