--- a/doc/toc.yml
+++ b/doc/toc.yml
@@ -31,6 +31,23 @@ items:
     - name: ML-Column
       href: database/ml-column.md
 
+- name: Themes
+  items:
+    - name: Einführung
+      href: themes/einfuehrung.md
+    - name: Verwalten
+      href: themes/verwalten.md
+    - name: "Zwischen Themes wechseln"
+      href: themes/zwischen-themes-wechseln.md
+    - name: "Themeable Properties"
+      href: "themes/themeable-properties.md"
+    - name: "Properties Theme-abhängig ändern"
+      href: "themes/properties-theme-abhaengig-aendern.md"
+    - name: "Hierarchie bei mehreren Packages und Themes"
+      href: "themes/hierarchie-bei-mehreren-package-und-themes.md"
+    - name: Aufräum-Routine
+      href: "themes/aufraeum-routine.md"
+
 - name: Dokumentations-System
   items:
     - name: Dokumentations-System
