--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "cSpell.language": ",de,en",
     "cSpell.words": [
+        "Datasource",
         "FSROWID",
         "ROWID",
         "arial",
