--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,11 @@
 {
     "cSpell.language": ",de,en",
     "cSpell.words": [
-        "Strg",
+        "Codabar",
         "Datasource",
         "FSROWID",
         "ROWID",
+        "Strg",
         "arial",
         "ausgegrauten",
         "auszuchecken",
