--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,9 +9,11 @@
         "arial",
         "ausgegrauten",
         "auszuchecken",
+        "combobox",
         "dateadd",
         "datediff",
         "datepart",
+        "dbtable",
         "editfeld",
         "editfield",
         "ehid",
